fixed localization build issues
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5066 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/LinuxClient/po/Makefile.am
+++ b/ifolder/src/LinuxClient/po/Makefile.am
@@ -25,8 +25,9 @@ POFILES = $(srcdir)/pt_BR.po \
 	 $(srcdir)/fr.po \
 	 $(srcdir)/it.po \
 	 $(srcdir)/ja.po \
-	 $(srcdir)/ma.po \
+	 $(srcdir)/hu.po \
 	 $(srcdir)/pl.po \
+	 $(srcdir)/pt.po \
 	 $(srcdir)/ru.po \
 	 $(srcdir)/zh_CN.po \
 	 $(srcdir)/zh_TW.po
