--- a/ifolder/src/LinuxClient/po/Makefile.am
+++ b/ifolder/src/LinuxClient/po/Makefile.am
@@ -17,7 +17,7 @@ SUFFIXES = .c .o .po .pox .gmo .mo
 	  && rm -f $$file && $(GMSGFMT) --statistics -o $$file $<
 
 POFILES = $(srcdir)/pt_BR.po \
-	 $(srcdir)/cz.po \
+	 $(srcdir)/cs.po \
 	 $(srcdir)/de.po \
 	 $(srcdir)/en.po \
 	 $(srcdir)/es.po \
