--- a/ifolder/src/iFolder/Makefile.am
+++ b/ifolder/src/iFolder/Makefile.am
@@ -11,7 +11,7 @@ iFolder_LIBPATH =
 
 EXTRA_DIST = AssemblyInfo.cs.in
 
-AssemblyInfo.cs: $(srcdir)/AssemblyInfo.cs.in
+AssemblyInfo.cs: $(srcdir)/AssemblyInfo.cs.in Makefile
 	sed -e 's,@_VERSION_@,@VERSION@,g' $< > $@
 	chmod +x $@
 
