--- a/simias/src/POBoxWS/Makefile.am
+++ b/simias/src/POBoxWS/Makefile.am
@@ -1,15 +1,15 @@
 # handle Mono secondary dependencies
 export MONO_PATH := $(MONO_PATH)
 
-POBoxWS_CSFILES1 = $(srcdir)/AssemblyInfo.cs $(srcdir)/POBoxService.asmx.cs
-POBoxWS_CSFILES := $(subst /,$(SEP),$(POBoxWS_CSFILES1))
+POBoxWS_CSFILES = $(srcdir)/AssemblyInfo.cs $(srcdir)/POBoxService.asmx.cs
+POBoxWS_CSFILES_CSC := $(subst /,$(SEP),$(POBoxWS_CSFILES))
 POBoxWS_INCLUDES =
 POBoxWS_RESOURCES =
 POBoxWS_FLAGS = $(CSC_LIBFLAG)
 POBoxWS_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasClient.dll Simias.dll
 POBoxWS_LIBPATH = ../SimiasClient ../Simias.dll
 
-EXTRA_DIST = POService.asmx $(POBoxWS_CSFILES1) AssemblyInfo.cs.in
+EXTRA_DIST = POService.asmx $(POBoxWS_CSFILES) AssemblyInfo.cs.in
 
 if MAKE_DOC_FILE
 DOC_FILE = $(basename $@).doc.xml
@@ -20,9 +20,9 @@ endif
 all: Simias.POBox.Web.dll
 
 Simias.POBox.Web.dll: AssemblyInfo.cs $(POBoxWS_CSFILES) $(POBoxWS_RESOURCES)
-	$(CSC) /out:$@ $(CSCFLAGS) $(POBoxWS_FLAGS) $(SIMIAS_LIBS) $(POBoxWS_LIBS:%=/r:%) $(POBoxWS_LIBPATH:%=/lib:%) $(POBoxWS_RESOURCES:%=$(ICON_FLAG)%) $(POBoxWS_CSFILES) $(DOC_FILE_CMD)
+	$(CSC) /out:$@ $(CSCFLAGS) $(POBoxWS_FLAGS) $(SIMIAS_LIBS) $(POBoxWS_LIBS:%=/r:%) $(POBoxWS_LIBPATH:%=/lib:%) $(POBoxWS_RESOURCES:%=$(ICON_FLAG)%) $(POBoxWS_CSFILES_CSC) $(DOC_FILE_CMD)
 
-AssemblyInfo.cs: $(srcdir)/AssemblyInfo.cs.in
+AssemblyInfo.cs: $(srcdir)/AssemblyInfo.cs.in Makefile
 	sed -e 's,@_VERSION_@,@VERSION@,g' $< > $@
 	chmod +x $@
 	
