--- a/simias/src/POBoxWS/AssemblyInfo.cs.in
+++ b/simias/src/POBoxWS/AssemblyInfo.cs.in
@@ -3,15 +3,15 @@ using System.Runtime.CompilerServices;
 
 //
 // General Information about an assembly is controlled through the following 
-// set of attributes. Change these attribute values to modify the information
-// associated with an assembly.
+// set of attributes.
 //
+
 [assembly: AssemblyTitle("")]
 [assembly: AssemblyDescription("")]
 [assembly: AssemblyConfiguration("")]
-[assembly: AssemblyCompany("")]
-[assembly: AssemblyProduct("")]
-[assembly: AssemblyCopyright("")]
+[assembly: AssemblyCompany("Novell, Inc.")]
+[assembly: AssemblyProduct("Simias")]
+[assembly: AssemblyCopyright("(c) 2004-2005 Novell, Inc.")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]		
 
@@ -25,8 +25,10 @@ using System.Runtime.CompilerServices;
 //
 // You can specify all the values or you can default the Revision and Build Numbers 
 // by using the '*' as shown below:
+//
 
 [assembly: AssemblyVersion("@_VERSION_@")]
+[assembly: AssemblyInformationalVersion("@_VERSION_@")]
 
 //
 // In order to sign your assembly you must specify a key to use. Refer to the 
@@ -45,15 +47,11 @@ using System.Runtime.CompilerServices;
 //       (2) If the KeyName does not exist and the KeyFile does exist, the key 
 //           in the KeyFile is installed into the CSP and used.
 //   (*) In order to create a KeyFile, you can use the sn.exe (Strong Name) utility.
-//        When specifying the KeyFile, the location of the KeyFile should be
-//        relative to the "project output directory". The location of the project output
-//        directory is dependent on whether you are working with a local or web project.
-//        For local projects, the project output directory is defined as
-//       <Project Directory>\obj\<Configuration>. For example, if your KeyFile is
+//       When specifying the KeyFile, the location of the KeyFile should be
+//       relative to the project output directory which is
+//       %Project Directory%\obj\<configuration>. For example, if your KeyFile is
 //       located in the project directory, you would specify the AssemblyKeyFile 
 //       attribute as [assembly: AssemblyKeyFile("..\\..\\mykey.snk")]
-//        For web projects, the project output directory is defined as
-//       %HOMEPATH%\VSWebCache\<Machine Name>\<Project Directory>\obj\<Configuration>.
 //   (*) Delay Signing is an advanced option - see the Microsoft .NET Framework
 //       documentation for more information on this.
 //
