--- a/simias/src/SimiasServer/AssemblyInfo.cs.in
+++ b/simias/src/SimiasServer/AssemblyInfo.cs.in
@@ -1,40 +1,17 @@
-/***********************************************************************
- *  $RCSfile$
- *
- *  Copyright (C) 2004 Novell, Inc.
- *
- *  This program is free software; you can redistribute it and/or
- *  modify it under the terms of the GNU General Public
- *  License as published by the Free Software Foundation; either
- *  version 2 of the License, or (at your option) any later version.
- *
- *  This program is distributed in the hope that it will be useful,
- *  but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- *  General Public License for more details.
- *
- *  You should have received a copy of the GNU General Public
- *  License along with this program; if not, write to the Free
- *  Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
- *
- *  Author: Rob
- *
- ***********************************************************************/
-
 using System.Reflection;
 using System.Runtime.CompilerServices;
 
 //
 // General Information about an assembly is controlled through the following 
-// set of attributes. Change these attribute values to modify the information
-// associated with an assembly.
+// set of attributes.
 //
-[assembly: AssemblyTitle("Simias Server")]
+
+[assembly: AssemblyTitle("")]
 [assembly: AssemblyDescription("")]
 [assembly: AssemblyConfiguration("")]
-[assembly: AssemblyCompany("")]
-[assembly: AssemblyProduct("Simias Server")]
-[assembly: AssemblyCopyright("")]
+[assembly: AssemblyCompany("Novell, Inc.")]
+[assembly: AssemblyProduct("Simias")]
+[assembly: AssemblyCopyright("(c) 2004-2005 Novell, Inc.")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]		
 
@@ -48,8 +25,10 @@ using System.Runtime.CompilerServices;
 //
 // You can specify all the values or you can default the Revision and Build Numbers 
 // by using the '*' as shown below:
+//
 
 [assembly: AssemblyVersion("@_VERSION_@")]
+[assembly: AssemblyInformationalVersion("@_VERSION_@")]
 
 //
 // In order to sign your assembly you must specify a key to use. Refer to the 
