--- a/simias/src/WebService/AssemblyInfo.cs.in
+++ b/simias/src/WebService/AssemblyInfo.cs.in
@@ -1,43 +1,17 @@
-/***********************************************************************
- *  $RCSfile$
- *
- *  Copyright © Unpublished Work of Novell, Inc. All Rights Reserved.
- *
- *  THIS WORK IS AN UNPUBLISHED WORK AND CONTAINS CONFIDENTIAL,
- *  PROPRIETARY AND TRADE SECRET INFORMATION OF NOVELL, INC. ACCESS TO 
- *  THIS WORK IS RESTRICTED TO (I) NOVELL, INC. EMPLOYEES WHO HAVE A 
- *  NEED TO KNOW HOW TO PERFORM TASKS WITHIN THE SCOPE OF THEIR 
- *  ASSIGNMENTS AND (II) ENTITIES OTHER THAN NOVELL, INC. WHO HAVE 
- *  ENTERED INTO APPROPRIATE LICENSE AGREEMENTS. NO PART OF THIS WORK 
- *  MAY BE USED, PRACTICED, PERFORMED, COPIED, DISTRIBUTED, REVISED, 
- *  MODIFIED, TRANSLATED, ABRIDGED, CONDENSED, EXPANDED, COLLECTED, 
- *  COMPILED, LINKED, RECAST, TRANSFORMED OR ADAPTED WITHOUT THE PRIOR 
- *  WRITTEN CONSENT OF NOVELL, INC. ANY USE OR EXPLOITATION OF THIS 
- *  WORK WITHOUT AUTHORIZATION COULD SUBJECT THE PERPETRATOR TO 
- *  CRIMINAL AND CIVIL LIABILITY.  
- *
- *  Author: Calvin Gaisford <cgaisford@novell.com>
- *
- ***********************************************************************/
-
-using System;
 using System.Reflection;
-using System.Resources;
-using System.Security;
 using System.Runtime.CompilerServices;
-using System.Runtime.InteropServices;
 
 //
 // General Information about an assembly is controlled through the following 
 // set of attributes.
 //
 
-[assembly: AssemblyTitle("Simias.Web.dll")]
-[assembly: AssemblyDescription("Simias.Web.dll")]
+[assembly: AssemblyTitle("")]
+[assembly: AssemblyDescription("")]
 [assembly: AssemblyConfiguration("")]
-[assembly: AssemblyCompany("Simias Development Team")]
-[assembly: AssemblyProduct("Simias Web Services")]
-[assembly: AssemblyCopyright("(c) 2004 Novell, Inc.")]
+[assembly: AssemblyCompany("Novell, Inc.")]
+[assembly: AssemblyProduct("Simias")]
+[assembly: AssemblyCopyright("(c) 2004-2005 Novell, Inc.")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]		
 
@@ -54,25 +28,33 @@ using System.Runtime.InteropServices;
 //
 
 [assembly: AssemblyVersion("@_VERSION_@")]
-
-[assembly: SatelliteContractVersion("@_VERSION_@")]
-[assembly: ComCompatibleVersion(1, 0, 0, 0)]
-[assembly: TypeLibVersion(1, 0)]
-
-[assembly: CLSCompliant(false)]
-[assembly: AssemblyDefaultAlias("Simias.Web.dll")]
 [assembly: AssemblyInformationalVersion("@_VERSION_@")]
-[assembly: NeutralResourcesLanguage("en-US")]
-
-[assembly: AllowPartiallyTrustedCallers]
-[assembly: ComVisible(false)]
 
 //
-// In order to sign your assembly you must specify a key to use.
+// In order to sign your assembly you must specify a key to use. Refer to the 
+// Microsoft .NET Framework documentation for more information on assembly signing.
+//
 // Use the attributes below to control which key is used for signing. 
 //
-
-//[assembly: AssemblyDelaySign(true)]
-//[assembly: AssemblyKeyFile("../simias-snakeoil.keys")]
-//[assembly: AssemblyKeyName("")]
- 
+// Notes: 
+//   (*) If no key is specified, the assembly is not signed.
+//   (*) KeyName refers to a key that has been installed in the Crypto Service
+//       Provider (CSP) on your machine. KeyFile refers to a file which contains
+//       a key.
+//   (*) If the KeyFile and the KeyName values are both specified, the 
+//       following processing occurs:
+//       (1) If the KeyName can be found in the CSP, that key is used.
+//       (2) If the KeyName does not exist and the KeyFile does exist, the key 
+//           in the KeyFile is installed into the CSP and used.
+//   (*) In order to create a KeyFile, you can use the sn.exe (Strong Name) utility.
+//       When specifying the KeyFile, the location of the KeyFile should be
+//       relative to the project output directory which is
+//       %Project Directory%\obj\<configuration>. For example, if your KeyFile is
+//       located in the project directory, you would specify the AssemblyKeyFile 
+//       attribute as [assembly: AssemblyKeyFile("..\\..\\mykey.snk")]
+//   (*) Delay Signing is an advanced option - see the Microsoft .NET Framework
+//       documentation for more information on this.
+//
+[assembly: AssemblyDelaySign(false)]
+[assembly: AssemblyKeyFile("")]
+[assembly: AssemblyKeyName("")]
