Add Czech help files (these are currently in English) (partial fix for https://bugzilla.novell.com/show_bug.cgi?id=99775).
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/R2OESSP1RC1_BR@5084 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/help/Makefile.am
+++ b/ifolder/help/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST = en de es fr hu it ja pl pt ru sk zh-CN zh-TW
+EXTRA_DIST = en cs de es fr hu it ja pl pt ru sk zh-CN zh-TW
 
 if WINDOWS
 
