real ifolders are showing
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5100 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/gnome-vfs-ifolder/src/Makefile.am
+++ b/gnome-vfs-ifolder/src/Makefile.am
@@ -21,3 +21,11 @@ moddir = $(GPREFIX)/lib/gnome-vfs-2.0/modules
 conf_DATA = ifolders.conf
 confdir = /etc$(GPREFIX)/gnome-vfs-2.0/modules
 
+bin_PROGRAMS = ifolders-test
+ifolders_test_SOURCES = ifolders-test.c ifolders-method.c
+ifolders_test_LDFLAGS = \
+	$(GLIB_LIBS) \
+	$(GNOME_VFS_MODULE_LIBS) \
+	$(SIMIAS_CLIENT_C_LIBS) \
+	$(IFOLDER_C_LIBS)
+
