Updated the BUILDING file to correspond with the latest gaim release (v1.5.0).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5109 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/gaim-ifolder/configure.in
+++ b/gaim-ifolder/configure.in
@@ -2,7 +2,7 @@ AC_INIT(src/GaimDomain/GaimDomain.cs)
 AC_CANONICAL_SYSTEM
 AM_CONFIG_HEADER(config.h)
 
-AM_INIT_AUTOMAKE(gaim-domain, 1.0)
+AM_INIT_AUTOMAKE(gaim-ifolder, 0.1)
 VERSION=$VERSION.`date +%Y%m%d`
 AM_MAINTAINER_MODE
 AC_PROG_CC
