Changed the package name to simias-bonjour added package stuff for Linux added Linux package stuff to configure
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5119 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/bonjour/package/Makefile.am
+++ b/bonjour/package/Makefile.am
@@ -22,7 +22,7 @@
 #######################################################################
 SUBDIRS = @SIMD_OS@
 
-DIST_SUBDIRS = darwin
+DIST_SUBDIRS = darwin linux
 
 sdk:	
 	$(MAKE) -C $(IFOLDER_OS) sdk
