--- a/bonjour/configure.in
+++ b/bonjour/configure.in
@@ -2,7 +2,7 @@ AC_INIT(src/Bonjour/Domain.cs)
 AC_CANONICAL_SYSTEM
 AM_CONFIG_HEADER(config.h)
 
-AM_INIT_AUTOMAKE(bonjour, 0.1)
+AM_INIT_AUTOMAKE(simias-bonjour, 0.1)
 VERSION=$VERSION.`date +%Y%m%d`
 AM_MAINTAINER_MODE
 AC_PROG_CC
@@ -491,6 +491,8 @@ src/Bonjour/Makefile
 src/libsimiasbonjour/Makefile
 package/Makefile
 package/darwin/Makefile
+package/linux/Makefile
+package/linux/simias-bonjour.spec
 ])
 
 
